--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,46 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+title: cryptoanarchy.wiki - Cypherpunks Mailing List Archive
+description: Arise, you have nothing to lose but your barbed wire fences!
+author: cryptoanarchy.wiki
+github: https://github.com/cryptoanarchywiki/mailing-list-archive
+about: Arise, you have nothing to lose but your barbed wire fences!
+disqus_shortname: cryptoanarchywiki
+google_analytics: UA-77476019-2
+avatar_url: /static/img/avatar.jpg
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+enableTags: true
+tagarray: []
 
-# Build settings
+social:
+    - icon: fa-twitter
+      link: "https://twitter.com/_cryptoanarchy"
+    - icon: fa-facebook
+      link: "https://www.facebook.com/cryptoanarchy.wiki"
+    - icon: fa-github
+      link: "https://github.com/cryptoanarchywiki"
+
+share:
+  twitter_username: _cryptoanarchy
+  fb_appid: 
+
+similar_resources:
+    - text: Lopp's Bitcoin Resources
+      url: "https://lopp.net/bitcoin.html"
+    - text: Satoshi Nakamoto Institute
+      url: "https://nakamotoinstitute.org/"
+    - text: "Activism.net: Cypherpunks"
+      url: "https://www.activism.net/cypherpunk/"
+
+url: "https://cryptoanarchy.wiki"
+baseurl: ""
+per_page: 20
 markdown: kramdown
-theme: minima
 plugins:
-  - jekyll-feed
+  - jekyll-paginate
+  - jekyll-gist
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+compress_html:
+  clippings: all
+  comments: ["<!-- ", " -->"]
+  endings: all
+  ignore:
+    envs: ['development']
